[package]
name = "audio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15.0"
poem = "1.3.26"
poem-openapi = { version = "1.3.26", features = ["swagger-ui"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
clap = { version = "3.1.12", features = ["derive"] }
